﻿0.9.0
=====

New Features:

  * Support the #if: parser function.  Usage: {{#if: test | true | false}}.
  * Automatically populate sample JDBC values based on database type on the
    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Speed up topic add/update by not immediately triggering a re-optimization
    of the search index on update.
  * Upgrade to Spring Framework 3.0.0.RC2.
  * Upgrade to Spring Security 3.0.0.RC1.
  * Upgrade to Lucene Search 3.0.0.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.

Bugfixes:

  * A link from a topic page to itself should be formatted as plain bold text,
    not as a link.  Reported by floatingworld.
  * XML imports of redirect topics were not redirecting properly.
  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".

Translation Updates:

  * Updated Polish translations (dlpa).


0.8.0
=====

New Features:

  * Drop support for JDK 1.4.  Java 5 or later is now required to run JAMWiki.
  * Special:Import can now import Mediawiki files with full history, edit
    dates, and edit comments.
  * Special:Export can now export topics in Mediawiki format with full history,
    edit dates, and edit comments.
  * Mediawiki-style logs for uploads, user creation, etc are now available via
    the Special:Log page.
  * Add an optional "Show Changes" button during editing to display a diff
    view of the current edit.
  * Add diff highlighting for the portion of the line that changed (if any),
    similar to Mediawiki.
  * Allow an alternate file name to be specified as the "Destination Filename"
    when uploading, similar to Mediawiki.
  * Add links to the edited section in edit summaries on recent changes,
    history, etc, similar to Mediawiki.